Реализованы повторные попытки для записи/обновления данных в БД (и добавлена статистика об успешных возвратах)
